# livraria

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
livraria/: models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0003_autor_livro.py  0004_livro_autores.py
livraria/models/: livro.py
livraria/serializers/: __init__.py
